package recipeio.enums;

/**
 * Enum for meal category.
 */
public enum MealCategory {
    GENERAL, BREAKFAST, LUNCH, DINNER, APPETIZER, DESSERT
}
