@startuml
'https://plantuml.com/class-diagram

hide circle
hide empty members

skinparam classAttributeIconSize 0
class RecipeList {

    +executeCommand(String command, String userInput) : void
    +saveRecipes() : void
}
class Recipe {
    +name: String
    +cookTime: int
    +calories: int
    +allergies: ArrayList<String>
    +url: String
    +dateAdded: LocaleDate
    +toString(): String
}

class CommandValidator {
}

note left of Recipe::"toString()"
    Overridden method
end note

RecipeList *--> "recipe *" Recipe : contains >
RecipeList ..> CommandValidator

Recipe --> "mealCategory 1" MealCategory

enum MealCategory <<enumeration>> {
    GENERAL, BREAKFAST,
    LUNCH, DINNER,
    APPETIZER, DESSERT
}

@enduml